# form-submission-backend

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  error.rs  handlers.rs  main.rs  send_mail.rs  state.rs
src/state/: init.rs
