[package]
name = "form-submission-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["form", "macros"] }
axum-extra = "0.10"
derive-getters = "0.5.0"
displaydoc = "0.2.5"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
lettre = { version = "0.11.11", default-features = false, features = ["smtp-transport", "pool", "tokio1-rustls-tls", "builder", "hostname", "tokio1"] }
minijinja = { version = "2.6.0", default-features = false, features = ["serde", "builtins", "unicode", "debug", "loader", "speedups", "preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.4.0"
url = { version = "2.5.4", features = ["serde"] }
